UPD. update test file and swagger
