# docs/swagger.json
@@ -32,7 +32,25 @@
                     "200": {
                         "description": "ok",
                         "schema": {
+                            "$ref": "#/definitions/dto.UrlResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "bad request",
+                        "schema": {
                             "type": "string"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbiden",
+                        "schema": {
+                            "$ref": "#/definitions/errors.ErrorInfo"
+                        }
+                    },
+                    "500": {
+                        "description": "internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/errors.ErrorInfo"
                         }
                     }
                 }
@@ -66,6 +84,17 @@
         }
     },
     "definitions": {
+        "dto.UrlResponse": {
+            "type": "object",
+            "properties": {
+                "longUrl": {
+                    "type": "string"
+                },
+                "shortUrl": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.UrlShortenerRequest": {
             "type": "object",
             "required": [
@@ -77,6 +106,17 @@
                 },
                 "longUrl": {
                     "description": "LongUrl string `json:\"long_url\" binding:\"required, NotEmptyValidator\"`",
+                    "type": "string"
+                }
+            }
+        },
+        "errors.ErrorInfo": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "msg": {
                     "type": "string"
                 }
             }
