# dto/url.go
@@ -1,5 +1,10 @@
 package dto
 
+import (
+	"regexp"
+	e "url-shortener/errors"
+)
+
 /**
  * Construct of URL for API
  *
@@ -8,7 +13,6 @@ package dto
  *
  */
 type UrlShortenerRequest struct {
-	// LongUrl string `json:"long_url" binding:"required, NotEmptyValidator"`
 	LongUrl string `json:"longUrl" binding:"required"`
 	Alias   string `json:"alias, omitempty"`
 }
@@ -22,9 +26,23 @@ type RedirectRequest struct {
 	RedirectURL string `json:"redirect_url"`
 }
 
-func (r UrlShortenerRequest) Validate() bool {
-	if r.LongUrl == "" {
+func (r UrlShortenerRequest) Validate() (bool, e.ErrorInfo) {
+	if r.IsEmpty() {
+		return false, e.InvalidLongUrlError
+	}
+	if !r.IsValidAlias() {
+		return false, e.InvalidAliasError
+	}
+	return true, e.NoError
+}
+
+func (r UrlShortenerRequest) IsValidAlias() bool {
+	if ok, _ := regexp.MatchString("^[a-zA-Z0-9]{0,30}$", r.Alias); !ok {
 		return false
 	}
 	return true
+}
+
+func (r UrlShortenerRequest) IsEmpty() bool {
+	return r.LongUrl == ""
 }
